<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Memorize</string>
    <string name="settingsTitle">Memorize editor</string>
    <string name="createGame">Create a new game</string>
    <string name="nameGame">Name :</string>
    <string name="hintName">Edit name</string>
    <string name="typeGame">Type :</string>
    <string name="radio_addition">Arithmetic</string>
    <string name="radio_sounds">Images and Sounds</string>
    <string name="radio_letters">Letters</string>
    <string name="nextGame">Next</string>
    <string name="modifyGame">Modify an existing one</string>
    <string name="preview">Preview :</string>
    <string name="warningPairs">Warning : you will need to create at least 10 pairs for a usable game.</string>
    <string name="addPair">Add</string>
    <string name="saveGame">Save</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mult">*</string>
    <string name="numberPairs">Number of pairs : </string>
    <string name="needMorePairs">You need to create at least 10 pairs to be able to save this game.</string>
    <string name="gotIt">I understand</string>
    <string name="titleSave">Saving this game</string>
    <string name="areYouSure">Do you want to save this game ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="addPicture">Import a picture</string>
    <string name="addSound">Import a sound</string>
    <string name="fromGallery">From the gallery</string>
    <string name="fromCamera">From the camera</string>
    <string name="fromSDCard">From the SD card</string>
    <string name="fromSystem">From the media system</string>
    <string name="importPictSound">Import :</string>
    <string name="aPicture">a picture</string>
    <string name="aSound">a sound</string>
    <string name="noSDCard">No SD card founded</string>
    <string name="titleModify">Modify or delete the selected game</string>
    <string name="modifyOrDelete">Do you want to modify or delete the selected game ?</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="alreadyExist">Choose a different name for this new game</string>
    <string name="sameName">A game with this name already exists. Please choose another name or modify the existing one.</string>
    <string name="titleMissingInfos">Missing informations</string>
    <string name="missingInfos">It seems that there is a problem loading the picture or the sound. Please check that you have selected a picture and a sound.</string>
    <string name="defaultTheme">Default Theme</string>
    <string name="mandala">Mandala Theme</string>
    <string name="golden">Golden Theme</string>
    <string name="digital">Digital Theme</string>
    <string name="geometrical">Geometrical Theme</string>
    <string name="congratulations">Congratulations !</string>
    <string name="playAgain">Play Again</string>
    <string name="quit">Quit</string>

    <string-array name="addition_array">
        <item>@string/plus</item>
        <item>@string/minus</item>
        <item>@string/mult</item>
    </string-array>
    <string-array name="addPictureArray">
        <item>@string/fromGallery</item>
        <item>@string/fromCamera</item>
    </string-array>
    <string-array name="addSoundArray">
        <item>@string/fromSDCard</item>
        <item>@string/fromSystem</item>
    </string-array>
    <string-array name="changeTheme">
        <item>@string/defaultTheme</item>
        <item>@string/mandala</item>
        <item>@string/golden</item>
        <item>@string/digital</item>
        <item>@string/geometrical</item>
    </string-array>

</resources>