<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f1dd"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="30dp"
        android:text="@string/settingsTitle"
        android:textColor="#07565b"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="440dp"
        android:layout_gravity="bottom|center"
        android:layout_marginRight="60dp"
        android:src="@drawable/monkey_settings" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="140dp"
        android:text="@string/createGame"
        android:textColor="#07565b"
        android:textSize="33sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="230dp"
        android:text="@string/nameGame"
        android:textColor="#07565b"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editTxt"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="230dp"
        android:hint="@string/hintName"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="280dp"
        android:text="@string/typeGame"
        android:textColor="#07565b"
        android:textSize="25sp" />

    <RadioGroup
        android:id="@+id/radioType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="280dp" >

        <RadioButton
            android:id="@+id/radioAddition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_addition"
            android:textColor="#07565b" />

        <RadioButton
            android:id="@+id/radioSounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_sounds"
            android:textColor="#07565b" />

        <RadioButton
            android:id="@+id/radioLetters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_letters"
            android:textColor="#07565b" />
    </RadioGroup>

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="70dp"
        android:background="#07565b"
        android:padding="10sp"
        android:text="@string/nextGame"
        android:textColor="#f4f1dd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="70dp"
        android:text="@string/modifyGame"
        android:textColor="#07565b"
        android:textSize="25sp" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="240dp" />

</FrameLayout>