<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <FrameLayout
        android:id="@+id/left"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.5"
        android:background="@color/light_grey"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/previewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/preview"
            android:textColor="@color/olpc_text_grey_color"
            android:textSize="20sp" />

        <com.morphoss.xo.memorize.ObjView
            android:id="@+id/obj_view_pair1"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="90dp" />

        <com.morphoss.xo.memorize.ObjView
            android:id="@+id/obj_view_pair2"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="90dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_marginLeft="320dp"
            android:layout_marginTop="85dp"
            android:src="@drawable/music" />

        <TextView
            android:id="@+id/importText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="240dp"
            android:text="@string/importPictSound"
            android:textColor="@color/olpc_text_grey_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pictureText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="290dp"
            android:text="@string/aPicture"
            android:textColor="@color/olpc_text_grey_color"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/addPicture"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="270dp"
            android:scaleType="centerCrop"
            android:src="@drawable/import_picture" />

        <TextView
            android:id="@+id/soundText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="290dp"
            android:text="@string/aSound"
            android:textColor="@color/olpc_text_grey_color"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/addSound"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="270dp"
            android:scaleType="centerCrop"
            android:src="@drawable/import_sound" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="360dp"
            android:text="@string/warningPairs"
            android:textColor="@color/olpc_text_grey_color"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/addItems"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/pair_add" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="200dp"
            android:text="@string/addPair"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="230dp"
            android:layout_height="240dp"
            android:layout_gravity="bottom|right"
            android:layout_margin="10dp"
            android:src="@drawable/monkey_music" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/right"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.5"
        android:background="@color/olpc_dark_grey"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/saveGame"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="top|right"
            android:layout_margin="10dp"
            android:background="@drawable/save" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:layout_marginRight="300dp"
            android:layout_marginTop="25dp"
            android:text="@string/numberPairs"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/numberPairsCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:layout_marginRight="270dp"
            android:layout_marginTop="25dp"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:layout_marginRight="80dp"
            android:layout_marginTop="25dp"
            android:text="@string/saveGame"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/clearGame"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="top|left"
            android:layout_margin="10dp"
            android:background="@drawable/edit_clear" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp" >

            <LinearLayout
                android:id="@+id/newItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</LinearLayout>