<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <FrameLayout
        android:id="@+id/left"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.5"
        android:background="#b4d4ad"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/previewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/preview"
            android:textColor="#07565b"
            android:textSize="20sp" />

        <com.morphoss.xo.memorize.ObjView
            android:id="@+id/obj_view_pair1"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="90dp" />

        <com.morphoss.xo.memorize.ObjView
            android:id="@+id/obj_view_pair2"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="90dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="115dp"
            android:src="@drawable/letter" />

        <EditText
            android:id="@+id/editTxtLetter"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="280dp"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="#07565b" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="360dp"
            android:text="@string/warningPairs"
            android:textColor="#07565b"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/addItems"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/pair_add" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="200dp"
            android:text="@string/addPair"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="10dp"
            android:src="@drawable/monkey_boat" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/right"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.5"
        android:background="#39747a"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/saveGame"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="top|right"
            android:layout_margin="10dp"
            android:background="@drawable/save" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:layout_marginRight="270dp"
            android:layout_marginTop="25dp"
            android:text="@string/numberPairs"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/numberPairsCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:layout_marginRight="230dp"
            android:layout_marginTop="25dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:layout_marginRight="80dp"
            android:layout_marginTop="25dp"
            android:text="@string/saveGame"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/clearGame"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="top|left"
            android:layout_margin="10dp"
            android:background="@drawable/edit_clear" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp" >

            <LinearLayout
                android:id="@+id/newItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</LinearLayout>