<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <FrameLayout
        android:id="@+id/left"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.5"
        android:background="#b4d4ad"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/previewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:text="@string/preview"
            android:textColor="#07565b"
            android:textSize="14sp" />

        <com.morphoss.xo.memorize.ObjView
            android:id="@+id/obj_view_pair1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="60dp" />

        <com.morphoss.xo.memorize.ObjView
            android:id="@+id/obj_view_pair2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="60dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/math" />

        <EditText
            android:id="@+id/editTxtAddition"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="170dp"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="#07565b" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="155dp" />

        <EditText
            android:id="@+id/editTxtAddition2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="170dp"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="#07565b" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="235dp"
            android:text="@string/warningPairs"
            android:textColor="#07565b"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/addItems"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="140dp"
            android:background="@drawable/pair_add" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="140dp"
            android:text="@string/addPair"
            android:textColor="#07565b"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="bottom|right"
            android:src="@drawable/monkey_bush" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/right"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.5"
        android:background="#6b9591"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/saveGame"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="top|right"
            android:layout_margin="10dp"
            android:background="@drawable/save" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:layout_marginRight="150dp"
            android:layout_marginTop="20dp"
            android:text="@string/numberPairs"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/numberPairsCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:layout_marginRight="120dp"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:layout_marginRight="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/saveGame"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/clearGame"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="top|left"
            android:layout_margin="10dp"
            android:background="@drawable/edit_clear" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="55dp" >

            <LinearLayout
                android:id="@+id/newItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</LinearLayout>